--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('/home/bogan/Загрузки/train.csv')\n",
-    "test = pd.read_csv('/home/bogan/Загрузки/val.csv')"
+    "train = pd.read_csv('train.csv')\n",
+    "test = pd.read_csv('val.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,75 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sklearn"
+    "from fancyimpute import MICE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.impute import MICEImputer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 423,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaler = MICEImputer(n_imputations=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 424,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MICEImputer(imputation_order='ascending', initial_strategy='mean',\n",
-       "      max_value=None, min_value=None, missing_values='NaN', n_burn_in=10,\n",
-       "      n_imputations=10, n_nearest_features=None, predictor=None,\n",
-       "      random_state=None, verbose=False)"
-      ]
-     },
-     "execution_count": 424,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "scaler.fit(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 425,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = scaler.transform(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 426,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_test = scaler.transform(data_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -259,7 +207,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = MICE(n_imputations=10).complete(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if data_test.isnull().any().any():\n",
+    "    data_test = MICE(n_imputations=10).complete(data_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,9 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.utils.np_utils import to_categorical   \n",
     "\n",
@@ -280,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,30 +334,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:5: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(256, input_dim=38, activation=<keras.lay..., kernel_initializer=\"uniform\")`\n",
+      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:5: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(256, input_dim=38, kernel_initializer=\"uniform\", activation=<keras.lay...)`\n",
       "  \"\"\"\n",
       "/usr/local/lib/python3.5/dist-packages/keras/activations.py:115: UserWarning: Do not pass a layer instance (such as PReLU) as the activation argument of another layer. Instead, advanced activation layers should be used just like any other layer in a model.\n",
       "  identifier=identifier.__class__.__name__))\n",
-      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:7: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(128, activation=<keras.lay..., kernel_initializer=\"uniform\")`\n",
+      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:7: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(128, kernel_initializer=\"uniform\", activation=<keras.lay...)`\n",
       "  import sys\n",
-      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:9: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(64, activation=<keras.lay..., kernel_initializer=\"uniform\")`\n",
+      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:9: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(64, kernel_initializer=\"uniform\", activation=<keras.lay...)`\n",
       "  if __name__ == '__main__':\n",
-      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:11: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(128, activation=<keras.lay..., kernel_initializer=\"uniform\")`\n",
+      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:11: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(128, kernel_initializer=\"uniform\", activation=<keras.lay...)`\n",
       "  # This is added back by InteractiveShellApp.init_path()\n",
-      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:13: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(64, activation=<keras.lay..., kernel_initializer=\"uniform\")`\n",
+      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:13: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(64, kernel_initializer=\"uniform\", activation=<keras.lay...)`\n",
       "  del sys.path[0]\n",
-      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:15: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(128, activation=<keras.lay..., kernel_initializer=\"uniform\")`\n",
+      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:15: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(128, kernel_initializer=\"uniform\", activation=<keras.lay...)`\n",
       "  from ipykernel import kernelapp as app\n",
-      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:17: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(64, activation=<keras.lay..., kernel_initializer=\"uniform\")`\n",
-      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:19: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(9, activation=<keras.lay..., kernel_initializer=\"uniform\")`\n",
-      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:20: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(3, activation=\"sigmoid\", kernel_initializer=\"uniform\")`\n"
+      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:17: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(64, kernel_initializer=\"uniform\", activation=<keras.lay...)`\n",
+      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:19: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(9, kernel_initializer=\"uniform\", activation=<keras.lay...)`\n",
+      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:20: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(3, kernel_initializer=\"uniform\", activation=\"sigmoid\")`\n"
      ]
     },
     {
@@ -355,35 +365,35 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "30000/30000 [==============================] - 10s 334us/step - loss: 0.6090 - acc: 0.6805\n",
+      "30000/30000 [==============================] - 13s 431us/step - loss: 0.6083 - acc: 0.6806\n",
       "Epoch 2/15\n",
-      "30000/30000 [==============================] - 1s 41us/step - loss: 0.5400 - acc: 0.7213\n",
+      "30000/30000 [==============================] - 1s 30us/step - loss: 0.5056 - acc: 0.7472\n",
       "Epoch 3/15\n",
-      "30000/30000 [==============================] - 1s 34us/step - loss: 0.4499 - acc: 0.7690\n",
+      "30000/30000 [==============================] - 1s 29us/step - loss: 0.4033 - acc: 0.8304\n",
       "Epoch 4/15\n",
-      "30000/30000 [==============================] - 1s 35us/step - loss: 0.3884 - acc: 0.8434\n",
+      "30000/30000 [==============================] - 1s 29us/step - loss: 0.3741 - acc: 0.8518\n",
       "Epoch 5/15\n",
-      "30000/30000 [==============================] - 1s 34us/step - loss: 0.3586 - acc: 0.8606\n",
+      "30000/30000 [==============================] - 1s 29us/step - loss: 0.3638 - acc: 0.8568\n",
       "Epoch 6/15\n",
-      "30000/30000 [==============================] - 1s 33us/step - loss: 0.3425 - acc: 0.8681\n",
+      "30000/30000 [==============================] - 1s 30us/step - loss: 0.3535 - acc: 0.8624\n",
       "Epoch 7/15\n",
-      "30000/30000 [==============================] - 1s 34us/step - loss: 0.3304 - acc: 0.8715\n",
+      "30000/30000 [==============================] - 1s 29us/step - loss: 0.3493 - acc: 0.8632\n",
       "Epoch 8/15\n",
-      "30000/30000 [==============================] - 1s 34us/step - loss: 0.3244 - acc: 0.8744\n",
+      "30000/30000 [==============================] - 1s 29us/step - loss: 0.3419 - acc: 0.8663\n",
       "Epoch 9/15\n",
-      "30000/30000 [==============================] - 1s 33us/step - loss: 0.3191 - acc: 0.8771\n",
+      "30000/30000 [==============================] - 1s 29us/step - loss: 0.3373 - acc: 0.8679\n",
       "Epoch 10/15\n",
-      "30000/30000 [==============================] - 1s 34us/step - loss: 0.3137 - acc: 0.8805\n",
+      "30000/30000 [==============================] - 1s 30us/step - loss: 0.3354 - acc: 0.8693\n",
       "Epoch 11/15\n",
-      "30000/30000 [==============================] - 1s 36us/step - loss: 0.3091 - acc: 0.8823\n",
+      "30000/30000 [==============================] - 1s 31us/step - loss: 0.3315 - acc: 0.8705\n",
       "Epoch 12/15\n",
-      "30000/30000 [==============================] - 1s 35us/step - loss: 0.3054 - acc: 0.8845\n",
+      "30000/30000 [==============================] - 1s 29us/step - loss: 0.3275 - acc: 0.8723\n",
       "Epoch 13/15\n",
-      "30000/30000 [==============================] - 1s 35us/step - loss: 0.3030 - acc: 0.8838\n",
+      "30000/30000 [==============================] - 1s 29us/step - loss: 0.3236 - acc: 0.8737\n",
       "Epoch 14/15\n",
-      "30000/30000 [==============================] - 1s 35us/step - loss: 0.3010 - acc: 0.8852\n",
+      "30000/30000 [==============================] - 1s 30us/step - loss: 0.3218 - acc: 0.8748\n",
       "Epoch 15/15\n",
-      "30000/30000 [==============================] - 1s 36us/step - loss: 0.2989 - acc: 0.8864\n"
+      "30000/30000 [==============================] - 1s 30us/step - loss: 0.3211 - acc: 0.8762\n"
      ]
     }
    ],
@@ -417,22 +427,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8077173308577582"
+       "0.7540964799570918"
       ]
      },
-     "execution_count": 434,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "from sklearn.metrics import f1_score\n",
     "f1_score(true, predictions, average=\"macro\")"
    ]
   },
@@ -461,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
